# Crush20L

./: .gitignore  CMakeLists.txt  CircularBuffer.hpp  OrangeCrush20L.jucer  ParameterQueue.hpp  README.md  ReSample.hpp  Stage.cpp  Stage.h  Stage1.cpp  Stage1.h  Stage2.cpp  Stage2.h  Stage3.cpp  Stage3.h  Stage4.cpp  Stage4.h  Stage5.cpp  Stage5.h  Stage6.cpp  Stage6.h  installer.nsi  main.cpp
Assets/: hardclip.txt  hc.txt  hc1.txt  hc10.txt  hc500.txt
Source/: Cab.cpp  Cab.h  CabHelpers.cpp  CabHelpers.h  CircularBuffer.hpp  MyLookAndFeel.cpp  MyLookAndFeel.h  ParameterQueue.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReSample.hpp  Stage.cpp  Stage.h  Stage1.cpp  Stage1.h  Stage2.cpp  Stage2.h  Stage3.cpp  Stage3.h  Stage3WithMatrix.cpp  Stage3WithMatrix.h  Stage4.cpp  Stage4.h  Stage5.cpp  Stage5.h  Stage6.cpp  Stage6.h  Switch.cpp  Switch.h
